--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "resend": "^4.8.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^11.0.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
