--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
     "mongoose": "^9.0.0",
-    "motion": "^12.24.11",
+    "motion": "^12.29.0",
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "resend": "^4.8.0",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.4.0",
     "uuid": "^11.0.0",
     "zod": "^3.25.76",
