--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
     "@google/genai": "^1.30.0",
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@remixicon/react": "^4.8.0",
     "@tabler/icons-react": "^3.36.1",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "gsap": "^3.14.2",
     "inngest": "^3.46.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
