--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.30.0",
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@remixicon/react": "^4.8.0",
     "@tabler/icons-react": "^3.36.1",
     "class-variance-authority": "^0.7.1",
