--- a/components.json
+++ b/components.json
@@ -20,6 +20,7 @@
   },
   "registries": {
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
-    "@magicui": "https://magicui.design/r/{name}"
+    "@magicui": "https://magicui.design/r/{name}",
+    "@pacekit": "https://ui.pacekit.dev/r/{name}.json"
   }
 }
