--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@auth/mongodb-adapter": "^3.11.1",
     "@google/genai": "^1.30.0",
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@remixicon/react": "^4.8.0",
     "@tabler/icons-react": "^3.36.1",
     "class-variance-authority": "^0.7.1",
