--- a/components.json
+++ b/components.json
@@ -21,6 +21,7 @@
   "registries": {
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
     "@magicui": "https://magicui.design/r/{name}",
-    "@pacekit": "https://ui.pacekit.dev/r/{name}.json"
+    "@pacekit": "https://ui.pacekit.dev/r/{name}.json",
+    "@tailark": "https://tailark.com/r/{name}.json"
   }
 }
