--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
     "mongoose": "^9.0.0",
-    "motion": "^12.29.2",
+    "motion": "^12.31.0",
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.30",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "resend": "^4.8.0",
