--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
+    "@faker-js/faker": "^10.2.0",
     "@google/genai": "^1.30.0",
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
@@ -19,6 +21,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remixicon/react": "^4.8.0",
     "@tabler/icons-react": "^3.36.1",
+    "@tailus/themer": "^0.1.8",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
@@ -35,6 +38,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.7.0",
     "resend": "^4.8.0",
     "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.4.0",
