--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.4.0",
     "uuid": "^11.0.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.76",
     "zustand": "^5.0.9"
   },
