--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.5.0",
     "gsap": "^3.14.2",
     "inngest": "^3.46.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
     "mongoose": "^9.0.0",
